# OpenGLGraphics

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GameEngine  Makefile  PhysicsEngine  cmake_install.cmake  compile_flags.txt  imgui.ini
.gitignore/: .gitignore
data/shaders/: frag-light.sh  frag.sh  vert-light.sh  vert.sh
include/: Camera.hpp  Engine.hpp  Entity.hpp  Light.hpp  ListItem.hpp  Material.hpp  Shader.hpp  Test.hpp  Texture.hpp
include/Renderer/: Mesh.hpp  Renderer.hpp
include/RenderingEngine/: Mesh.hpp  Renderer.hpp
include/tools/: CircularQueue.hpp  MeshHelper.hpp  Shader.hpp  Texture.hpp  Timer.hpp  Vertex.hpp
src/: Camera.cpp  Engine.cpp  Entity.cpp  Light.cpp  Shader.cpp  Test.cpp  Texture.cpp  Timer.cpp  glad.c  main.cpp
src/Renderer/: Mesh.cpp  Renderer.cpp
src/RenderingEngine/: Mesh.cpp  Renderer.cpp
src/tools/: Shader.cpp  Texture.cpp  Timer.cpp
